@@ -48,6 +48,7 @@ void ags_task_thread_set_run_mutex(AgsAsyncQueue *async_queue, pthread_mutex_t *
 pthread_mutex_t* ags_task_thread_get_run_mutex(AgsAsyncQueue *async_queue);
 void ags_task_thread_set_run_cond(AgsAsyncQueue *async_queue, pthread_cond_t *run_cond);
 pthread_cond_t* ags_task_thread_get_run_cond(AgsAsyncQueue *async_queue);
+void ags_task_thread_set_run(AgsAsyncQueue *async_queue, gboolean is_run);
 gboolean ags_task_thread_is_run(AgsAsyncQueue *async_queue);
 
 void ags_task_thread_start(AgsThread *thread);
@@ -159,6 +160,7 @@ ags_task_thread_async_queue_interface_init(AgsAsyncQueueInterface *async_queue)
   async_queue->set_run_cond = ags_task_thread_set_run_cond;
   async_queue->get_run_cond = ags_task_thread_get_run_cond;
 
+  async_queue->set_run = ags_task_thread_set_run;
   async_queue->is_run = ags_task_thread_is_run;
 }
 
@@ -166,6 +168,8 @@ void
 ags_task_thread_init(AgsTaskThread *task_thread)
 {
   AgsThread *thread;
+
+  pthread_mutexattr_t mutexattr;
 
   thread = AGS_THREAD(task_thread);
 
@@ -178,8 +182,11 @@ ags_task_thread_init(AgsTaskThread *task_thread)
   g_atomic_int_set(&(task_thread->is_run),
 		   FALSE);
 
+  pthread_mutexattr_init(&(mutexattr));
+  pthread_mutexattr_settype(&(mutexattr), PTHREAD_MUTEX_RECURSIVE);
+
   task_thread->run_mutex = (pthread_mutex_t *) malloc(sizeof(pthread_mutex_t));
-  pthread_mutex_init(task_thread->run_mutex, NULL);
+  pthread_mutex_init(task_thread->run_mutex, &mutexattr);
 
   task_thread->run_cond = (pthread_cond_t *) malloc(sizeof(pthread_cond_t));
   pthread_cond_init(task_thread->run_cond, NULL);
@@ -260,6 +267,13 @@ pthread_cond_t*
 ags_task_thread_get_run_cond(AgsAsyncQueue *async_queue)
 {
   return(AGS_TASK_THREAD(async_queue)->run_cond);
+}
+
+void
+ags_task_thread_set_run(AgsAsyncQueue *async_queue, gboolean is_run)
+{
+  g_atomic_int_set(&(AGS_TASK_THREAD(async_queue)->is_run),
+		   is_run);
 }
 
 gboolean
@@ -353,7 +367,7 @@ ags_task_thread_run(AgsThread *thread)
     int i;
 
     pthread_mutex_lock(task_thread->launch_mutex);
-    pthread_mutex_lock(AGS_AUDIO_LOOP(thread->parent)->recall_mutex);
+    //    pthread_mutex_lock(AGS_AUDIO_LOOP(thread->parent)->recall_mutex);
 
     for(i = 0; i < g_atomic_int_get(&(task_thread->pending)); i++){
       task = AGS_TASK(list->data);
@@ -367,7 +381,7 @@ ags_task_thread_run(AgsThread *thread)
       list = list->next;
     }
 
-    pthread_mutex_unlock(AGS_AUDIO_LOOP(thread->parent)->recall_mutex);
+    //    pthread_mutex_unlock(AGS_AUDIO_LOOP(thread->parent)->recall_mutex);
     pthread_mutex_unlock(task_thread->launch_mutex);
   }
 
@@ -380,6 +394,17 @@ ags_task_thread_run(AgsThread *thread)
 
   pthread_mutex_unlock(task_thread->read_mutex);
 
+  /* async queue */
+  pthread_mutex_lock(task_thread->run_mutex);
+  
+  ags_async_queue_set_run(AGS_ASYNC_QUEUE(task_thread),
+			  TRUE);
+	
+  pthread_cond_broadcast(task_thread->run_cond);
+  
+  pthread_mutex_unlock(task_thread->run_mutex);
+  
+  /* clean-up */
   pango_fc_font_map_cache_clear(pango_cairo_font_map_get_default());
   pango_cairo_font_map_set_default(NULL);
   //  cairo_debug_reset_static_data();
